Complete React setup

--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "webpack.config.js",
   "scripts": {
     "heroku-postbuild": "NODE_ENV=production npm run webpack -- -p",
-    "test": "node_modules/.bin/karma start karma.conf.js",
+    "test": "node_modules/.bin/karma start react/karma.conf.js",
     "start": "yarn run webpack -- --watch",
     "webpack": "node_modules/.bin/webpack --config ./react/webpack.config.js"
   },
-  "author": { "name" : "Bobby Bates"
-, "email" : "robertfbatesjr@gmail.com"
-, "url" : "https://github.com/goodcleanfun"
-},
+  "author": {
+    "name": "Bobby Bates",
+    "email": "robertfbatesjr@gmail.com",
+    "url": "https://github.com/goodcleanfun"
+  },
   "license": "ISC",
   "devDependencies": {
     "enzyme": "^2.9.1",
