--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-on-rails": "^9.0.3",
-    "react-router": "^3.0.2",
-    "webpack": "^2.6.0",
+    "react-router-dom": "^4.2.2",
+    "webpack": "^3.6.0",
     "webpacker-react": "^0.3.0"
   },
   "devDependencies": {
