--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,10 @@
 .byebug_history
 /public/packs
 /public/packs-test
+/public/uploads/*
 /node_modules
+
+/coverage
+.env
+/app/assets/javascripts/bundle.js
+*.sqlite3
