--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "babel-preset-react": "^6.5.0",
     "immutability-helper": "^2.4.0",
     "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "^15.6.2",
+    "react-bootstrap": "^0.31.3",
+    "react-dom": "^15.6.2",
     "react-on-rails": "^9.0.3",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "1.x",
