--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-react": "^6.5.0",
     "immutability-helper": "^2.4.0",
+    "material-ui": "^0.19.2",
+    "material-ui-icons": "^1.0.0-beta.10",
     "prop-types": "^15.5.10",
     "react": "^15.6.2",
     "react-bootstrap": "^0.31.3",
