--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "material-ui-icons": "^1.0.0-beta.10",
     "prop-types": "^15.5.10",
     "react": "^15.6.2",
+    "react-autosuggest": "^9.3.2",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^15.6.2",
     "react-on-rails": "^9.0.3",
